# sdlSnake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makeUnix.sh  makeVS2015.bat
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp  snakegame.cpp  snakegame.h
